# OpenLibrary-Server

./: pyproject.toml
.github/workflows/: codeql-analysis.yml
application/structure/: book.py  language.py  title.py  writer.py
application/translation/: struct.py
application/translation/resources/: __init__.py  en_US.json  ko_KR.json  translation_template.json
